Fixed overflow-x

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -29,6 +29,10 @@
 * {
   box-sizing: border-box; }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   padding: 0;
   margin: 0;
